USART/USART2_STM32/.metadata/.plugins/org.eclipse.cdt.ui/DSDSDS.build.log
13:52:21 **** Incremental Build of configuration Debug for project DSDSDS ****
make -j12 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m3 -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32L100xC -c -I../Core/Inc -I../Drivers/STM32L1xx_HAL_Driver/Inc -I../Drivers/STM32L1xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32L1xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
../Core/Src/main.c: In function 'MX_USART2_UART_Init':
../Core/Src/main.c:290:3: error: 'huart2' undeclared (first use in this function)
  290 |   huart2.Instance = USART2;
      |   ^~~~~~
../Core/Src/main.c:290:3: note: each undeclared identifier is reported only once for each function it appears in
make: *** [Core/Src/subdir.mk:34: Core/Src/main.o] Error 1
"make -j12 all" terminated with exit code 2. Build might be incomplete.

13:52:21 Build Failed. 2 errors, 0 warnings. (took 304ms)

